@@ -64,6 +64,38 @@
                 },
                 {
                   "type": "minecraft:item",
+                  "conditions": [
+                    {
+                      "condition": "minecraft:table_bonus",
+                      "enchantment": "minecraft:fortune",
+                      "chances": [
+                        0.05,
+                        0.1,
+                        0.2,
+                        0.5
+                      ]
+                    }
+                  ],
+                  "name": "minecraft:stick"
+                },
+                {
+                  "type": "minecraft:item",
+                  "conditions": [
+                    {
+                      "condition": "minecraft:table_bonus",
+                      "enchantment": "minecraft:fortune",
+                      "chances": [
+                        0.05,
+                        0.1,
+                        0.2,
+                        0.5
+                      ]
+                    }
+                  ],
+                  "name": "minecraft:bone"
+                },
+                {
+                  "type": "minecraft:item",
                   "name": "minecraft:gravel"
                 }
               ]
