@@ -1,0 +1,16 @@
+{
+  "type": "stone_age:flint_workbench",
+  "group": "boat",
+  "pattern": [
+    "# #",
+    "###"
+  ],
+  "key": {
+    "#": {
+      "item": "minecraft:dark_oak_planks"
+    }
+  },
+  "result": {
+    "item": "minecraft:dark_oak_boat"
+  }
+}
